vpp_lang/src_vpp/vpp.peg

VPP_Lexis	<- Spacing Token* EndOfFile

Token		<- Operator / Number / Identifier / RawString

RawString	<- "'" < (!"'" . )* > "'" Spacing
			{
				fprintf(stdout, "Got RawString '%s'\n", yytext);
			}

Operator	<- < Symbol+ > Spacing
			{
				fprintf(stdout, "Got Operator '%s'\n", yytext);
			}
			
Number	<- < Digit+ > Spacing
			{
				fprintf(stdout, "Got Number '%s'\n", yytext);
			}
			
Identifier	<- < Letter+ > Spacing
			{
				fprintf(stdout, "Got Identifier '%s'\n", yytext);
			}
			
String		<- ["] < (!["] StrChar )* > ["] Spacing
StrChar		<- '\\' [abefnrtv'"\[\]\\]
		 / '\\' [0-3][0-7][0-7]
		 / '\\' [0-7][0-7]?
		 / !'\\' .

Symbol		<- [!#$%&=?¡¿*+~:;,|<>] / '\\' / '/' / '^' / '-'

Letter		<- [a-zA-Z_]
Digit		<- [0-9]

OpenRB		<- '(' Spacing
CloseRB		<- ')' Spacing
OpenBB		<- '[' Spacing
CloseBB		<- ']' Spacing
OpenCB		<- '{' Spacing
CloseCB		<- '}' Spacing

Spacing		<- (Space / Comment)*
Space		<- ' ' / '\t' / EndOfLine
Comment		<- '#' (!EndOfLine .)* EndOfLine
EndOfLine	<- '\r\n' / '\n' / '\r'
EndOfFile	<- !.
